inheritance/output.txt
inheritance$ g++ polymorphism2.5.cpp 
polymorphism2.5.cpp: In function ‘int main()’:
polymorphism2.5.cpp:48:10: error: cannot convert ‘Student [10]’ to ‘Student (*)[20]’ in assignment
   48 |     p2 = p4;
      |          ^~
      |          |
      |          Student [10]
inheritance$ 
